2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/heap.inl, score/src/heapwalk.c: Do not
	inline code to check if newline should be printed. It leads to branch
	path explosion which is really hard to get coverage on.

2009-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/heapgetinfo.c: Simplify implementation.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadinitialize.c: Rework so there is only one error exit
	path. This required setting every variable that contains memory
	allocated from the workspace to NULL early and using that assumption
	in the one failed exit path.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/wkspace.c: Add debug printks.

2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/mqueuedeletesupp.c: Mark unreachable section as
	RTEMS_DEBUG.

2009-07-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Add _Thread_Enable_dispatch() on EAGAIN
	error case.  Add debug print on loop processing threads waiting
	for signal.
	* posix/src/psignal.c: When the sigwait() Thread Queue processing loop
	was changed to FIFO, I forgot to change the initialization to match.

2009-07-29	Roxana Leontie <roxana.leontie@gmail.com>

	* libmisc/mw-fb/mw_fb.h: Cleaned code and added some more structures.

2009-07-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am, libcsupport/preinstall.am,
	sapi/include/confdefs.h: Add configuration and basic device driver
	ver definition for frame buffer device.
	* libcsupport/include/rtems/framebuffer.h: New file.

2009-07-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/Makefile.am, score/preinstall.am: SuperCore Spinlock is only
	used by POSIX API. Do not build it when POSIX is not enabled.

2009-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/src/ioregisterdriver.c: Fix spacing.

2009-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>
