@@ -1,3 +1,8 @@
+2009-08-01	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* score/inline/rtems/score/heap.inl, score/src/heapresizeblock.c:
+	Simplify routine.
+
 2009-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* score/inline/rtems/score/heap.inl, score/src/heapwalk.c: Do not
